--- a/src/app.css
+++ b/src/app.css
@@ -12,10 +12,6 @@ body {
     @apply text-primary;
   }
 
-  svg {
-    @apply text-primary;
-  }
-  
   h1 {
     @apply text-4xl font-bold;
   }
@@ -33,12 +29,8 @@ body {
   }
 
   button {
-    @apply transition-all disabled:opacity-40 disabled:cursor-not-allowed focus:ring-2 focus:ring-offset-2 focus:ring-purple-500 inline-flex items-center px-4 py-2 border border-transparent text-base font-medium rounded-md shadow-sm text-white focus:outline-none;
+    @apply transition-all disabled:opacity-40 disabled:cursor-not-allowed focus:ring-2 focus:ring-offset-2 focus:ring-purple-500 inline-flex items-center border border-transparent text-base font-medium shadow-sm focus:outline-none p-3 rounded-xl hover:bg-blue-500 hover:bg-opacity-80 w-fit h-fit hover:text-white;
   }
-
-  /* input { */
-  /*   @apply invalid:border-red-500 shadow-sm bg-secondary-bg p-4 focus:ring-indigo-500 focus:border-indigo-500 block w-full sm:text-sm border-gray-300 rounded-md py-3 outline-none; */
-  /* } */
 
   input {
     @apply bg-transparent border-b border-b-primary p-2 focus:border-b-cyan-500 focus-visible:outline-none transition-colors;
