--- a/src/app.css
+++ b/src/app.css
@@ -6,11 +6,23 @@ body {
   font-family: 'Inter', sans-serif;
 }
 
+html {
+  --color-crystal: #eb4b98;
+}
+
+html.dark {
+  --color-crystal: #f26df9;
+}
+
 
 @layer base {
 
-  html {
-    @apply text-primary;
+  html, label, p, input {
+    @apply text-slate-800 dark:text-gray-200;
+  }
+
+  svg {
+    @apply text-slate-900 dark:text-gray-200;
   }
 
   th {
@@ -42,12 +54,22 @@ body {
     @apply text-lg;
   }
 
-  button {
-    @apply transition-all disabled:opacity-40 disabled:cursor-not-allowed focus:ring-2 focus:ring-offset-2 focus:ring-crystal-primary inline-flex items-center border border-transparent text-base font-medium shadow-sm focus:outline-none p-3 rounded-xl hover:bg-blue-500 hover:bg-opacity-80 w-fit h-fit hover:text-white;
+button {
+ @apply transition-all disabled:cursor-not-allowed rounded-lg focus:ring-2 focus:ring-offset-0 focus:ring-crystal focus:outline-none  p-3 flex flex-row gap-2 items-center;
   }
 
+  button.solid {
+    @apply disabled:opacity-40  bg-slate-100  border border-slate-400 hover:bg-slate-200  shadow-md dark:bg-gray-700 dark:border-gray-200 dark:hover:bg-gray-600;
+  }
+
+  button.menu-item {
+      @apply hover:bg-slate-200 w-full border-t border-t-slate-300 rounded-none focus:ring-0 focus:ring-transparent ring-transparent;
+    }
+
+
   input.minimal {
-    @apply bg-transparent border-b border-b-primary p-2 focus:border-b-cyan-500 focus-visible:outline-none transition-colors;
+    @apply bg-transparent border-b border-b-slate-800 p-2 focus:border-b-crystal focus-visible:outline-none transition-colors;
+    @apply dark:border-b-gray-200;
   }
 
   label {
@@ -55,7 +77,7 @@ body {
     }
 
   input[type='checkbox'] {
-    @apply w-4 h-4 text-blue-600 bg-primary-bg border-gray-300 rounded;
+    @apply w-4 h-4 text-blue-600 border-gray-300 rounded;
   }
 
 }
