--- a/src/app.css
+++ b/src/app.css
@@ -4,25 +4,31 @@
 
 body {
   font-family: 'Inter', sans-serif;
+  box-sizing: border-box;
 }
 
 html {
-  --color-crystal: #eb4b98;
+  --color-crystal: theme(colors.crystal-secondary);
+  --color-text: theme(colors.slate.800);
 }
 
 html.dark {
-  --color-crystal: #f26df9;
+  --color-crystal: theme(colors.crystal-primary);
+  --color-text: theme(colors.gray.200);
 }
 
 
 @layer base {
+ * {
+  @apply focus:ring-2 focus:ring-offset-0 focus:ring-crystal focus:outline-none focus-visible:outline-none;
+}
 
   html, label, p, input {
-    @apply text-slate-800 dark:text-gray-200;
+    @apply text-text;
   }
 
   svg {
-    @apply text-slate-900 dark:text-gray-200;
+    @apply text-text;
   }
 
   th {
@@ -55,15 +61,19 @@ html.dark {
   }
 
 button {
- @apply transition-all disabled:cursor-not-allowed rounded-lg focus:ring-2 focus:ring-offset-0 focus:ring-crystal focus:outline-none  p-3 flex flex-row gap-2 items-center;
+ @apply transition-all disabled:cursor-not-allowed rounded-lg   p-3 flex flex-row gap-2 items-center;
   }
+
+button.ghost {
+  @apply hover:bg-slate-200;
+}
 
   button.solid {
     @apply disabled:opacity-40  bg-slate-100  border border-slate-400 hover:bg-slate-200  shadow-md dark:bg-gray-700 dark:border-gray-200 dark:hover:bg-gray-600;
   }
 
   button.menu-item {
-      @apply hover:bg-slate-200 w-full border-t border-t-slate-300 rounded-none focus:ring-0 focus:ring-transparent ring-transparent;
+      @apply hover:bg-slate-200 w-full rounded-none;
     }
 
 
