--- a/src/app.css
+++ b/src/app.css
@@ -53,26 +53,32 @@ html.dark {
     @apply text-lg;
   }
   h5 {
-    @apply text-sm;
   }
 
 p {
   @apply text-sm;
 }
 
-button {
- @apply transition-all disabled:cursor-not-allowed rounded-lg   p-3 flex flex-row gap-2 items-center;
-  }
+div.transparent {
+@apply bg-slate-200 bg-opacity-90 border-slate-300 dark:bg-gray-900 dark:bg-opacity-90 dark:border-gray-950;
+}
+
+/* button { */
+/*  @apply transition-all disabled:cursor-not-allowed rounded-lg   p-3 flex flex-row gap-2 items-center; */
+/*   } */
 
 button.ghost {
+@apply transition-all disabled:cursor-not-allowed rounded-lg   p-3 flex flex-row gap-2 items-center;
   @apply hover:bg-slate-200 dark:hover:bg-gray-600;
 }
 
   button.solid {
+@apply transition-all disabled:cursor-not-allowed rounded-lg   p-3 flex flex-row gap-2 items-center;
     @apply disabled:opacity-40  bg-slate-100  border border-slate-400 hover:bg-slate-200  shadow-md dark:bg-gray-700 dark:border-gray-950 dark:hover:bg-gray-600;
   }
 
   button.menu-item {
+@apply transition-all disabled:cursor-not-allowed rounded-lg   p-3 flex flex-row gap-2 items-center;
       @apply hover:bg-slate-200 w-full rounded-none dark:hover:bg-gray-600;
     }
 
